--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </nav>
     </header>
-    <!---------- /Header Section ------------------>
+    <!---------- /Header Section ---------------->
 
     <!---------- Main Section ------------------>
     <main id="site-main">
