read the README file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Digital Marketing</title>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <!-- bootstrap icon cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -77,7 +77,7 @@
                         <span class="d-block animate__animated animate__fadeInDown sm-color">business solutions</span>
                     </div>
                     <div class="py-5 animate__animated animate__fadeInUp sm-color">
-                        <p class="text-gray sm-color-2"> We merge imagination and technology to help thousand of </p>
+                        <p class="text-gray sm-color-2"> We merge imagination and technology to help thousands of </p>
                         <p class="text-gray sm-color-2"> brands grow in an age of digital transformation </p>
                     </div>
 
@@ -298,56 +298,56 @@
         <!------ recent work Area ------->
         <section class="container mx-auto py-10 recent-work-area">
             <div class="title">
-                <span class="d-inline btn btn-primary bg-gradient-peach text-red ">digital experience </span>
+                <span class="d-inline btn btn-primary bg-gradient-peach text-red ">Digital experience </span>
                 <div class="font-poppins">
                     <h1 class="text-lg text-dark py-5">
                         Some recent work <br>
-                        we really proud of <br>
+                        we are really proud of <br>
                     </h1>
                 </div>
                 <div class="images-flex font-poppins">
                     <div class="flex-item animate__animated animate__fadeInUp animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img1.png" alt="img1" class="w-100">
+                        <img src="assets/work/img1.png" alt="img1" class="w-100">
                         <h3 class="text-dark">Photo Retouching</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img2.png" alt="img2" class="w-100">
+                        <img src="assets/work/img2.png" alt="img2" class="w-100">
                         <h3 class="text-dark">Apple Iphone</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img3.png" alt="img3" class="w-100">
+                        <img src="assets/work/img3.png" alt="img3" class="w-100">
                         <h3 class="text-dark">Yoga</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img4.png" alt="img4" class="w-100">
+                        <img src="assets/work/img4.png" alt="img4" class="w-100">
                         <h3 class="text-dark">Recent News</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img5.png" alt="img5" class="w-100">
+                        <img src="assets/work/img5.png" alt="img5" class="w-100">
                         <h3 class="text-dark">New Apps</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img6.png" alt="img6" class="w-100">
+                        <img src="assets/work/img6.png" alt="img6" class="w-100">
                         <h3 class="text-dark">Iphone 13pro</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img7.png" alt="img7" class="w-100">
+                        <img src="assets/work/img7.png" alt="img7" class="w-100">
                         <h3 class="text-dark">Share Market</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img8.png" alt="img8" class="w-100">
+                        <img src="assets/work/img8.png" alt="img8" class="w-100">
                         <h3 class="text-dark">Yoga</h3>
                         <span class="text-gray">Branding</span>
                     </div>
                     <div class="flex-item animate__animated animate__fadeInUp">
-                        <img src="/assets/work/img9.png" alt="img9" class="w-100">
+                        <img src="assets/work/img9.png" alt="img9" class="w-100">
                         <h3 class="text-dark">Yoga</h3>
                         <span class="text-gray">Branding</span>
                     </div>
@@ -367,7 +367,7 @@
             <div class="grid cols-1 lg-cols-3 font-poppins">
                 <div class="card animate__animated animate__fadeInLeft">
                     <article class="btn-shadow">
-                        <img src="/assets/articles/img1.png" class="w-100" alt="">
+                        <img src="assets/articles/img1.png" class="w-100" alt="">
                         <div class="px-5 py-5">
                             <span class="text-gray">Category 6 hours ago</span>
                             <a href="#">
@@ -378,7 +378,7 @@
                 </div>
                 <div class="card animate__animated animate__fadeInLeft">
                     <article class="btn-shadow">
-                        <img src="/assets/articles/img2.png" class="w-100" alt="">
+                        <img src="assets/articles/img2.png" class="w-100" alt="">
                         <div class="px-5 py-5">
                             <span class="text-gray">Category 6 hours ago</span>
                             <a href="#">
@@ -389,7 +389,7 @@
                 </div>
                 <div class="card animate__animated animate__fadeInLeft">
                     <article class="btn-shadow">
-                        <img src="/assets/articles/img3.png" class="w-100" alt="">
+                        <img src="assets/articles/img3.png" class="w-100" alt="">
                         <div class="px-5 py-5">
                             <span class="text-gray">Category 6 hours ago</span>
                             <a href="#">
@@ -484,7 +484,7 @@
                 </div>
                 <div class="text-gray text-center md-text-left">
                     <h3 class="text-dark">Newsletter</h3>
-                    <p>Subscribe out Newsletter to get the <br>
+                    <p>Subscribe to our Newsletter to get the <br>
                         latest news Updates
                     </p>
                     <div class="flex py-5">
@@ -507,7 +507,7 @@
         integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-    <script src="main.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
